feat: Change color of utility buttons
Mom said this color is better 😁

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .row .utility {
-    background-color: #D4D4D2;
+    background-color: cyan;
     color: #000;
     font-weight: 400;
 }
