--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 }
 
 body {
-    font-family: "Oswald", sans-serif;
-    font-optical-sizing: auto;
+    font-family: "Courier New", Courier, monospace;
     background-color: #1C1C1C;
     font-weight: bold;
 }
@@ -37,12 +36,11 @@ body {
     background-color: #000;
     color: #fff;
     width: 100%;
-    padding: 0 32px;
+    padding: 0 30px;
 }
 
 .row > button {
-    font-family: "Oswald", sans-serif;
-    font-optical-sizing: auto;
+    font-family: "Courier New", Courier, monospace;
     font-size: 30px;
     font-weight: bold;
     text-align: center;
